Correctif Taille texte des Menu car Pb dans version mobile.

--- a/menu-main.scss
+++ b/menu-main.scss
@@ -109,11 +109,11 @@ header {
 // container principal
 
 .container__menu {
-  width: 100%;
+  width: 95%;
   height: auto;
   background-color: #f2f2f2;
   border-radius: 25px 25px 0 0;
-  padding: 15px;
+  padding: 15px 10px;
   z-index: 2;
   margin-top: -50px;
   // position: absolute;
@@ -130,7 +130,7 @@ header {
     align-items: center;
     .block__titre{
       h2 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 700;
         font-family: Shrikhand;
       }
@@ -153,7 +153,7 @@ header {
   height: 70px;
   // padding: 5px;
   // margin-bottom: 15px;
-  margin-left: -10px;
+  // margin-left: -10px;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
@@ -165,6 +165,7 @@ header {
   transform: animation;
   animation: slideInRight;
       .label__menu {
+        font-size: 14px;
         width: 100%;
         height: 70px;
         padding: 5px 15px 0 10px;
